--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "license": "MIT",
   "devDependencies": {
     "browserify": "^13.0.1",
+    "koa-cors": "0.0.16",
+    "reqwest": "^2.0.5",
     "snabbdom": "^0.4.2"
+  },
+  "dependencies": {
+    "koa": "^1.2.0",
+    "koa-route": "^2.4.2"
   }
 }
